# libplis

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  meson.build  plis-config.in  plis.pc.in
docs/: Makefile.am  Makefile.in  doxygen_footer.html  libplis.doxygen  mainpage.h
include/: meson.build
include/libplis/: plis.h  plis_regexp.h
libplis/: Makefile.am  Makefile.in  SConstruct  meson.build  plis.cc  plis.h  plis_regexp.h  test_library.cc
src/: Makefile.am  Makefile.in  SConstruct  meson.build  plis.cc  plis.pc
tests/: libplis_test.cc  meson.build
