dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libplis, 0.1.4)

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

all_libraries="$all_libraries $USER_LDFLAGS `pcre-config --libs`"
all_includes="$all_includes $USER_INCLUDES `pcre-config --cflags`"

dnl put the ACLOCAL flags in the makefile
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_SUBST(all_includes)
AC_SUBST(all_libraries)

dnl add here all your Makefiles. These will be created by configure
AC_OUTPUT(plis-config:plis-config.in plis.pc:plis.pc.in Makefile libplis/Makefile docs/Makefile, [chmod a+x plis-config] )
